--- a/SE/AdminPortal.html
+++ b/SE/AdminPortal.html
@@ -79,6 +79,15 @@
             <label for="new-Name">Full Name:</label>
             <input type="text" id="new-Name" required>
           </div>
+		   
+		  <div class="form-group">
+            <label for="EmployerID">Employer ID:</label>
+            <input type="text" id="employerID" required>
+          </div>
+		  <div class="form-group">
+            <label for="EmployerPass">Employer Password:</label>
+            <input type="password" id="EmployerPass" required>
+          </div>
           <div class="form-group">
             <label for="new-password">New Password:</label>
             <input type="password" id="new-password" required>
