--- a/SE/ClientPortal.html
+++ b/SE/ClientPortal.html
@@ -68,8 +68,21 @@
     </section>
     <section>
       <h2>Sign Up</h2>
+	  
       <div class="form-container">
         <form id="client-signup-form">
+		  <div class="form-group">
+            <label for="Name">Name:</label>
+            <input type="text" id="Name" required>
+          </div>
+		  <div class="form-group">
+            <label for="NationalID">National ID:</label>
+            <input type="text" id="nationalID" required>
+          </div>
+		  <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="text" id="Email" required>
+          </div>
           <div class="form-group">
             <label for="new-username">New Username:</label>
             <input type="text" id="new-username" required>
