--- a/SE/Home.html
+++ b/SE/Home.html
@@ -17,6 +17,7 @@
     <nav>
     <ul class="menu">
       <li><a href="Home.html" id="home">Home</a></li>
+	  <li><a href="Anouncements.html" id="anouncments">Anouncements</a></li>
       <li><a href="ContactUs.html" id="contact">Contact</a></li>
     </ul>
   </nav>
