--- a/SE/BankerPortal.html
+++ b/SE/BankerPortal.html
@@ -58,6 +58,7 @@
             <label for="national-id">National ID:</label>
             <input type="text" id="national-id" required>
           </div>
+		 
           <div class="form-group">
             <label for="password">Password:</label>
             <input type="password" id="password" required>
@@ -73,6 +74,18 @@
           <div class="form-group">
             <label for="new-national-id">New National ID:</label>
             <input type="text" id="new-national-id" required>
+          </div>
+		   <div class="form-group">
+            <label for="Name">Name:</label>
+            <input type="text" id="Name" required>
+          </div>
+		  <div class="form-group">
+            <label for="EmployerID">Employer ID:</label>
+            <input type="text" id="employerID" required>
+          </div>
+		  <div class="form-group">
+            <label for="EmployerPass">Employer Password:</label>
+            <input type="password" id="EmployerPass" required>
           </div>
           <div class="form-group">
             <label for="new-password">New Password:</label>
