--- a/SE/ClientPage.html
+++ b/SE/ClientPage.html
@@ -26,6 +26,8 @@
             <li><a href="#">Balance</a></li>
           </ul>
         </li>
+		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+
       </ul>
     </nav>
   <main>
