--- a/SE/ClientPage.html
+++ b/SE/ClientPage.html
@@ -12,7 +12,7 @@
       <img src="SE/logo.png" alt="Logo">
     </div>
     <h1>GUCBank</h1>
-   
+   <a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
    <nav>
       <ul class="menu">
@@ -21,11 +21,13 @@
         <li class="dropdown">
           <a href="#" id="my-account">My Account &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="#">Personal Information</a></li>
-            <li><a href="#">Credit Cards</a></li>
-            <li><a href="#">Balance</a></li>
+            <li><a href="Personalinfo.html">Personal Information</a></li>
+            <li><a href="Liabilities.html">Liabilities</a></li>
+            <li><a href="Balance.html">Balance</a></li>
+			
           </ul>
         </li>
+		 <li><a href="Transfer.html">Transfer</a></li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
 
       </ul>
