--- a/SE/Liabilities.html
+++ b/SE/Liabilities.html
@@ -137,6 +137,12 @@
     <p>&copy; 2023 GUCBank. All rights reserved.</p>
   </footer>
     <script src="script.js"></script>
+	
+	<script>
+
+
+
+</script>
 
 </body>
 </html>
