--- a/SE/Personalinfo.html
+++ b/SE/Personalinfo.html
@@ -66,6 +66,7 @@
           </ul>
         </li>
 		 <li><a href="Transfer.html">Transfer</a></li>
+		  <li><a href="Bills.html">Bills</a></li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
 
       </ul>
