--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -11,7 +11,7 @@
     <div class="logo">
       <img src="SE/logo.png" alt="Logo">
     </div>
-    <h1>GUCBank</h1>
+    <h1>ABG Bank</h1>
    <a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
    <nav>
