--- a/SE/Personalinfo_admin.html
+++ b/SE/Personalinfo_admin.html
@@ -59,11 +59,14 @@
         <li class="dropdown">
           <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="Personalinfo_.admin.html">Client's Information</a></li>
+            <li><a href="Personalinfo_admin.html">Personal Information</a></li>
+            <li><a href="Balance_admin.html">Balance</a></li>
+            <li><a href="Liabilities_admin.html">Liabilities</a></li>
             <li><a href="Complaints.html">Complaints</a></li>
           </ul>
         </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+    <li><a href="Bills_admin.html">Bills</a></li>
         <li><a href="Transfers_history.html" id="transfers">Transfers</a></li>
 
       </ul>
