--- a/SE/ClientPage.html
+++ b/SE/ClientPage.html
@@ -11,7 +11,7 @@
     <div class="logo">
       <img src="SE/logo.png" alt="Logo">
     </div>
-    <h1>GUCBank</h1>
+    <h1>ABG Bank</h1>
    <a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
    <nav>
@@ -37,7 +37,7 @@
     <!-- Your content goes here -->
   </main>
   <footer>
-    <p>&copy; 2023 GUCBank. All rights reserved.</p>
+    <p>&copy; 2023 ABG Bank. All rights reserved.</p>
   </footer>
   <script src="script.js"></script>
   
