--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -29,7 +29,7 @@
         <li><a href="Transfers_history.html" id="transfers">Transfers</a></li>
       </ul>
         <footer>
-            <p>&copy; 2023 GUCBank. All rights reserved.</p>
+            <p>&copy; 2023 ABG Bank. All rights reserved.</p>
           </footer>
         </body>
 </html>
