--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -7,15 +7,18 @@
   <title>Admin Page</title>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="SE/logo.png" alt="Logo">
-    </div>
-    <h1>
-        ABG Bank
-    </h1>
-   <a href="Home.html" class="sign-out-button">Sign Out</a>
-  </header>
+    <header>
+        <div class="logo">
+            <img src="SE/logo.png" alt="Logo">
+        </div>
+        <h1>
+            ABG Bank
+        </h1>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+        <a href="Home.html" class="sign-out-button">Sign Out</a>
+    </header>
    <nav>
       <ul class="menu">
         <li><a href="Home.html" id="home">Home</a></li>
