--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -54,12 +54,12 @@
   </header>
    <nav>
       <ul class="menu">
-        <li><a href="ClientPage.html" id="home">Home</a></li>
+        <li><a href="BankerPage.html" id="home">Home</a></li>
         <li><a href="ContactUs.html" id="contact">Contact</a></li>
         <li class="dropdown">
-          <a href="#" id="my-account">My Account &#9662;</a>
+          <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="Personalinfo.html">Personal Information</a></li>
+            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
             <li><a href="Liabilities.html">Liabilities</a></li>
             <li><a href="Balance.html">Balance</a></li>
 			
