--- a/SE/Liabilities_Banker.html
+++ b/SE/Liabilities_Banker.html
@@ -32,7 +32,7 @@
       padding: 8px;
       text-align: left;
     }
-{
+.credit-card-button, .loan-button {
       margin-top: 10px;
     }
   </style>
