--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -60,7 +60,7 @@
           <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="dropdown-menu">
             <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
-            <li><a href="Liabilities.html">Liabilities</a></li>
+            <li><a href="Liabilities_Banker.html">Liabilities</a></li>
             <li><a href="Balance.html">Balance</a></li>
 			
           </ul>
