--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -93,7 +93,7 @@
   </header>
   <nav>
     <ul class="menu">
-      <li><a href="AdminPage.html" id="home">Home</a></li>
+      <li><a href="BankerPage.html" id="home">Home</a></li>
       <li><a href="ContactUs.html" id="contact">Contact</a></li>
       <li class="dropdown">
         <a href="#" id="client-account">Client's Account &#9662;</a>
