--- a/SE/Balance.html
+++ b/SE/Balance.html
@@ -57,7 +57,7 @@
 
             .debit-card-table th,
             .debit-card-table td {
-                font-family: 'Teko', sans-serif;
+                font-family: 'Roboto', sans-serif;
                 border: 1px solid black;
                 padding: 8px;
                 text-align: left;
