--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -61,12 +61,12 @@
           <ul class="dropdown-menu">
             <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
             <li><a href="Liabilities_Banker.html">Liabilities</a></li>
-            <li><a href="Balance.html">Balance</a></li>
+            <li><a href="Balance_Banker.html">Balance</a></li>
 			
           </ul>
         </li>
 		 <li><a href="Transfer.html">Transfer</a></li>
-		  <li><a href="Bills.html">Bills</a></li>
+		  <li><a href="Bills_Banker.html">Bills</a></li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
 
       </ul>
