--- a/SE/Liabilities.html
+++ b/SE/Liabilities.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Liabilities</title>
-  <style>
-    .left-side {
-      float: left;
-      width: 50%;
-      border-right: 2px solid black;
-      padding-right: 10px;
-      box-sizing: border-box;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+    <title>Liabilities</title>
+    <style>
+        .left-side {
+            float: left;
+            width: 50%;
+            border-right: 2px solid black;
+            padding-right: 10px;
+            box-sizing: border-box;
+        }
 
-    .right-side {
-      float: right;
-      width: 50%;
-      padding-left: 10px;
-      box-sizing: border-box;
-    }
+        .right-side {
+            float: right;
+            width: 50%;
+            padding-left: 10px;
+            box-sizing: border-box;
+        }
 
-    .credit-card-table, .loan-table {
-      border-collapse: collapse;
-      width: 100%;
-      border: 2px solid black;
-    }
+        .credit-card-table, .loan-table {
+            border-collapse: collapse;
+            width: 100%;
+            border: 2px solid black;
+        }
 
-    .credit-card-table th, .credit-card-table td, .loan-table th, .loan-table td {
-      border: 1px solid black;
-      padding: 8px;
-      text-align: left;
-    }
+            .credit-card-table th, .credit-card-table td, .loan-table th, .loan-table td {
+                border: 1px solid black;
+                padding: 8px;
+                text-align: left;
+            }
 
-    .credit-card-button, .loan-button {
-      margin-top: 10px;
-    }
-  </style>
+        .credit-card-button, .loan-button {
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
   <header>
