--- a/SE/Transfer.html
+++ b/SE/Transfer.html
@@ -1,79 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Transfer</title>
-  <style>
-   
-.transfer-section {
-    float: left;
-    width: 33.33%;
-    padding: 20px;
-    box-sizing: border-box;
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+    <title>Transfer</title>
+    <style>
 
-    .transfer-container {
-	
-    justify-content: space-between;
-      width: 300px;
-      border: 2px solid black;
-      padding: 20px;
-      margin: 0 100px;
-    }
+        .transfer-section {
+            float: left;
+            width: 33.33%;
+            padding: 20px;
+            box-sizing: border-box;
+        }
 
-    .transfer-label {
-      display: block;
-      margin-bottom: 10px;
-	  
-    }
+        .transfer-container {
+            justify-content: space-between;
+            width: 300px;
+            border: 2px solid black;
+            padding: 20px;
+            margin: 0 100px;
+        }
 
-    .transfer-input {
-      width: 100%;
-      padding: 5px;
-      margin-bottom: 10px;
-    }
+        .transfer-label {
+            display: block;
+            margin-bottom: 10px;
+        }
 
-    .dms-transfer-button {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
-	   .intr-transfer-button {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
-	   .intn-transfer-button {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
+        .transfer-input {
+            width: 100%;
+            padding: 5px;
+            margin-bottom: 10px;
+        }
 
-    .transfer-sections {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-    }
-	.transfer-label {
-    font-size: 35px;
-    font-weight: bold;
-    margin-bottom: 25px;
-  }
-  </style>
+        .dms-transfer-button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            font-weight: bold;
+            border: none;
+            cursor: pointer;
+        }
+
+        .intr-transfer-button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            font-weight: bold;
+            border: none;
+            cursor: pointer;
+        }
+
+        .intn-transfer-button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            font-weight: bold;
+            border: none;
+            cursor: pointer;
+        }
+
+        .transfer-sections {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
+
+        .transfer-label {
+            font-size: 35px;
+            font-weight: bold;
+            margin-bottom: 25px;
+        }
+    </style>
 </head>
 <body>
   <header>
