--- a/SE/Liabilities_Banker.html
+++ b/SE/Liabilities_Banker.html
@@ -46,19 +46,19 @@
   </header>
    <nav>
       <ul class="menu">
-        <li><a href="ClientPage.html" id="home">Home</a></li>
+        <li><a href="BankerPage.html" id="home">Home</a></li>
         <li><a href="ContactUs.html" id="contact">Contact</a></li>
         <li class="dropdown">
           <a href="#" id="my-account">My Account &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="Personalinfo.html">Personal Information</a></li>
-            <li><a href="Liabilities.html">Liabilities</a></li>
-            <li><a href="Balance.html">Balance</a></li>
+            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+            <li><a href="Liabilities_Banker.html">Liabilities</a></li>
+            <li><a href="Balance_Banker.html">Balance</a></li>
 			
           </ul>
         </li>
 		 <li><a href="Transfer.html">Transfer</a></li>
-		  <li><a href="Bills.html">Bills</a></li>
+		  <li><a href="Bills_Banker.html">Bills</a></li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
 
       </ul>
