HomeHome is the new main home page

--- a/SE/Home.html
+++ b/SE/Home.html
@@ -15,7 +15,7 @@
   </header>
   <nav>
     <ul class="menu">
-      <li><a href="Home.html" id="home">Home</a></li>
+      <li><a href="HomeHome.html" id="home">Home</a></li>
       <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
       <li><a href="ContactUs.html" id="contact">Contact</a></li>
     </ul>
