--- a/SE/Home.html
+++ b/SE/Home.html
@@ -17,7 +17,7 @@
     <div class="logo">
       <img src="SE/logo.png" alt="Logo">
     </div>
-    <h1>GUCBank</h1>
+    <h1>ABGBank</h1>
   </header>
   <nav>
     <ul class="menu">
