--- a/SE/Personalinfo.html
+++ b/SE/Personalinfo.html
@@ -140,7 +140,8 @@
   <script src="script.js"></script>
 <script>
  
-document.addEventListener("DOMContentLoaded", function() {
+document.addEventListener("DOMContentLoaded", function(){
+  // getting elements of specified class 
   var AddressButton = document.querySelector('.AddressButton');
   var RequestButton = document.querySelector('.RequestButton');
   var ReportButton = document.querySelector('.ReportButton');
