--- a/SE/BankerPage.html
+++ b/SE/BankerPage.html
@@ -1,3 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+    <title>Banker Page</title>
+</head>
+<body>
+<header>
+
+  <div class="logo">
+      <img src="SE/logo.png" alt="Logo">
+  </div>
+  <h1>
+      ABG Bank
+  </h1>
+  <a href="Home.html" class="sign-out-button">Sign Out</a>
+</header>
 </header>
    <nav>
       <ul class="menu">
@@ -18,3 +43,5 @@
 
       </ul>
     </nav>
+    </body>
+    </html>
