--- a/SE/Liabilities_Banker.html
+++ b/SE/Liabilities_Banker.html
@@ -57,7 +57,7 @@
         <li class="dropdown">
           <a href="#" id="my-account">My Account &#9662;</a>
           <ul class="dropdown-menu">
-            <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
+            <li><a href="Personalinfo_Banker.html">Personal Information</a></li>
             <li><a href="Liabilities_Banker.html">Liabilities</a></li>
             <li><a href="Balance_Banker.html">Balance</a></li>
 			
