--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -38,7 +38,6 @@
         padding: 10px 0;
         text-align: center;
         margin-top: 0;
-        visibility: hidden;
     }
     .admin_menu li {
       display: inline-block;
@@ -62,6 +61,9 @@
     .admin_menu li.dropdown:hover .dropdown-menu {
       display: block;
     }
+    .client_container{
+      visibility : hidden;
+    }
     </style>
 </head>
 <body>
@@ -79,6 +81,7 @@
       <ul class="admin_menu">
         <li><a href="Home.html" id="home">Home</a></li>
         <li><a href="ContactUs.html" id="contact">Contact</a></li>
+        <ul class = "client-container">
         <li class="dropdown">
           <a href="#" id="client's_account">Client's Account &#9662;</a>
           <ul class="dropdown-menu">
@@ -91,6 +94,7 @@
         <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
         	 <li><a href="Bills_admin.html">Bills</a></li>
         <li><a href="Transfers_history.html" id="transfers">Transfers</a></li>
+      </ul>
       </ul>
    </nav>
       <div class="center_container">
@@ -114,8 +118,8 @@
     var userButton = document.querySelector('.UseridButton');
     userButton.addEventListener('click', function() {
       var user_id = document.getElementById('userid-input').value;
-      alert('Gaining access of User id ' + user_id+ ' profile');
-      document.getElementsByClassName('admin_menu')[0].style.visibility = "visible"; 
+      alert('Gaining access of User with an id ' + user_id);
+      document.getElementsByClassName('client_container')[0].style.visibility = "visible"; 
   });
 
   </script>
