--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -135,7 +135,7 @@
 </div>
   </main>
   <footer>
-    <p>&copy; 2023 GUCBank. All rights reserved.</p>
+    <p>&copy; 2023 ABGBank. All rights reserved.</p>
   </footer>  
   <script src="script.js"></script>
 <script>
