--- a/SE/Liabilities_Banker.html
+++ b/SE/Liabilities_Banker.html
@@ -137,7 +137,7 @@
     <div style="clear: both;"></div>
   </main>
   <footer>
-    <p>&copy; 2023 GUCBank. All rights reserved.</p>
+    <p>&copy; 2023 ABGBank. All rights reserved.</p>
   </footer>
     <script src="script.js"></script>
 	
