--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -161,7 +161,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 GUCBank. All rights reserved.</p>
+    <p>&copy; 2023 ABGBank. All rights reserved.</p>
   </footer>
   
   <script src="script.js"></script>
