--- a/SE/PersonalinfoBanker.html
+++ b/SE/PersonalinfoBanker.html
@@ -12,12 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
   <title>Personal Information</title>
   <style>
-    .left-side {
-      float: left;
-      width: 50%;
-      padding-right: 10px;
-      box-sizing: border-box;
-    }
+      .left-side {
+    margin: 0 auto;
+    margin-top: 50px;
+  }
 
     .right-side {
       float: right;
