--- a/SE/Personalinfo_admin.html
+++ b/SE/Personalinfo_admin.html
@@ -120,6 +120,15 @@
       </div>
       <div class="buttons">
         <button>Edit Account</button>
+        <select id="update_info" class="update-input">
+          <option value="1">First Name</option>
+          <option value="2">Last Name</option>
+          <option value="3">Date of Birth</option>
+          <option value="4">Nationality</option>
+          <option value="5">Address</option>
+          <option value="6">National ID</option>
+          <option value="7">User ID</option>
+        </select>
       </div>
       <div class="buttons">
         <button>Response to client's request</button>
