--- a/SE/Personalinfo_admin.html
+++ b/SE/Personalinfo_admin.html
@@ -119,15 +119,17 @@
         <button class="delete-button">Delete Account</button>
       </div>
       <div class="buttons">
-        <button>Edit Account</button>
-        <select id="update_info" class="update-input">
-          <option value="1">First Name</option>
-          <option value="2">Last Name</option>
-          <option value="3">Date of Birth</option>
-          <option value="4">Nationality</option>
-          <option value="5">Address</option>
-          <option value="6">National ID</option>
-          <option value="7">User ID</option>
+        <label for="update-input">edit:</label>
+        <input type="text" id="update-input" class="textbox" placeholder="edit">
+        <button class="update-button">Edit Account</button>
+        <select id="update_info" class="update-col">
+          <option value="Fist Name">First Name</option>
+          <option value="Last Name">Last Name</option>
+          <option value="Date of Birth">Date of Birth</option>
+          <option value="Nationality">Nationality</option>
+          <option value="Address">Address</option>
+          <option value="National ID">National ID</option>
+          <option value="User ID">User ID</option>
         </select>
       </div>
       <div class="buttons">
@@ -138,8 +140,10 @@
         <textarea id="response-input" class="textbox" placeholder="Enter your resolution"></textarea>
         <button class="ReportButton">Response to an issue</button>
       </div>
+      <div class="banner" id="info-banner" >
+        <span class="banner-text" id="info-banner-text"></span>
+      <div style="clear: both;"></div>
     </div>
-    <div style="clear: both;"></div>
   </main>
   <footer>
     <p>&copy; 2023 GUCBank. All rights reserved.</p>
@@ -152,6 +156,26 @@
     deleteButton.addEventListener('click', function(){
       alert("Client account is deleted, return to home page")
       window.location.href = "AdminPage.html";
+    })
+    var addButton = document.querySelector('.update-button');
+
+    // Add click event listener to the button
+    addButton.addEventListener('click', function() {
+      var selected_record = document.querySelector('.update-col').value;
+
+     var newinfo = document.getElementById('update-input').value;
+
+      // Get the banner element
+      var banner = document.getElementById('info-banner');
+
+      // Get the banner text element
+      var bannerText = document.getElementById('info-banner-text');
+      
+      // Set the banner text
+      bannerText.textContent = selected_record + ' value will be updated to be  ' + newinfo+ ' shortly.' +"................................................. "+  selected_record + ' value will be updated to be ' + newinfo + ' shortly.';
+
+      // Show the banner
+      banner.style.display = 'block';
     })
   })
 </script>
